fixed navbar linebreak issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -192,6 +192,9 @@ li a:hover {
     flex-direction: column;
     display: none;
     background-color: white;
+
+    position: fixed;
+    top: 72px;
   }
 
   li {
